<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/title"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edit_text_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/amount"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:inputType="number"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/type_expense_radio"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Expense"
            android:textColor="#4B465C"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/type_income_radio"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Income"
            android:textColor="#4B465C"
            android:textSize="14sp" />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingVertical="8dp"
        android:layout_gravity="center"
        android:background="@drawable/background_save_button"
        android:layout_marginHorizontal="32dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textAllCaps="false"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingVertical="8dp"
        android:layout_gravity="center"
        android:background="@drawable/background_delete_button"
        android:layout_marginHorizontal="32dp"
        android:text="@string/delete_all"
        android:textColor="@color/white"
        android:textAllCaps="false"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingVertical="8dp"
        android:layout_gravity="center"
        android:background="@drawable/background_edittext"
        android:layout_marginHorizontal="32dp"
        android:text="@string/summary"
        android:textColor="@color/black"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/expenses_income"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expense_income_card_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/no_expenses_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/no_expense_income_yet"
        android:textSize="18sp"
        android:textStyle="bold"/>


</LinearLayout>