<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".SummaryActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/total_income"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/total_income_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="320000"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/green"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/total_expense"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/total_expense_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="320000"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/balance"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="320000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>
    </LinearLayout>

</LinearLayout>